vlib/v/checker/tests/match_undefined_cond.out
vlib/v/checker/tests/match_undefined_cond.v:4:15: error: undefined ident: `Asd`
    2 |
    3 | fn main() {
    4 |     res := match Asd {
      |                  ~~~
    5 |         1 { 'foo' }
    6 |         2 { 'test' }
